fix(docs-infra): content overflow in mobile (#44851)
When reading the docs page on mobile, some page tend to scroll in horizontal direction quite a lot which is unpleasant

Fixes #44850

PR Close #44851

--- a/aio/src/styles/2-modules/table/_table.scss
+++ b/aio/src/styles/2-modules/table/_table.scss
@@ -3,6 +3,8 @@
 table {
   margin: 24px 0px;
   border-radius: 2px;
+  display: block;
+  overflow-x: auto;
 
   &.is-full-width {
     width: 100%;
